--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,16 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+#Android
+*.iml
+.gradle
+Android/local.properties
+Android/.idea/caches/build_file_checksums.ser
+Android/.idea/libraries
+Android/.idea/modules.xml
+Android/.idea/workspace.xml
+.DS_Store
+Android/build
+Android/captures
+.externalNativeBuild
