--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".EditProfile" />
-        <activity android:name=".registration"></activity>
+        <activity android:name=".registration" />
+        <activity android:name=".home"></activity>
     </application>
 
 </manifest>
