--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity android:name=".EditProfile" />
         <activity android:name=".registration" />
-        <activity android:name=".home"></activity>
+        <activity android:name=".home" />
         <activity
             android:name=".spaghetti_squash"
             android:label="@string/title_activity_spaghetti_squash"
@@ -33,6 +33,10 @@
         <activity
             android:name=".Food_Selection"
             android:label="@string/title_activity_food__selection"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Calendar"
+            android:label="@string/title_activity_calendar"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
