--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -17,15 +17,18 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
+        </activity>
+        <activity android:name=".EditProfile" />
+        <activity android:name=".registration" />
+        <activity android:name=".home"
+            android:label="UIFinalProject">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditProfile" />
-        <activity android:name=".registration" />
-        <activity android:name=".home"></activity>
+        <activity android:name=".create_routine"></activity>
     </application>
 
 </manifest>
