--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
         <activity
             android:name=".Calendar"
             android:label="@string/title_activity_calendar"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".soba_noodles"
+            android:label="@string/title_activity_soba_noodles"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
