--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -23,10 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".create_routine"/>
         <activity android:name=".EditProfile" />
         <activity android:name=".registration" />
-        <activity android:name=".ExerciseActivity"></activity>
-        <activity android:name=".home" />
+        <activity android:name=".ExerciseActivity"/>
+        <activity android:name=".home">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".spaghetti_squash"
             android:label="@string/title_activity_spaghetti_squash"
