Edit Exercises Works

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
 
         <activity android:name=".QRCode" />
         <activity android:name=".QRCodeResults" />
+        <activity android:name=".EditRoutineActivity" />
 
     </application>
 
