Added View Routine

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <activity android:name=".QRCodeResults" />
         <activity android:name=".EditRoutineActivity" />
         <activity android:name=".HeatyBoi"></activity>
-
+        <activity android:name=".ViewRoutineActivity"></activity>
     </application>
 
 </manifest>
